-------------------------- aqp 0.99-9.1 (2011-12-27) --------------------------
* pedonPC, NASIS, and SDA functions moved *out* of aqp, and *into* new package: soilDB
  - removed assocated, suggested packages from aqp

-------------------------- aqp 0.99-9 (2011-12-22) --------------------------
* almost ready for AQP 1.0, vignettes are the last missing piece :)
* slice(SPC, ...) is now 10-100x faster, scales linearly
* slice(SPC, ...) can simultaniously slice categorical and continuous variables
* converted ID column in sample data to character class
* fixed a bug in slice() where NA would be returned when IDs were factors
* added test to depths()<- such that factor IDs are converted into character IDs and a warning is issued
* added join conditions for most functions using plyr::join(), resulting in less chatter on the console 

-------------------------- aqp 0.99-8.58 (2011-12-21) --------------------------
* WARNING: soil.slot.multiple() renamed to slab()
* fixed minor bug in slice(), when numerical IDs are used: ddply() and cast() implicitly re-order data...
* added `strict` argument to many functions, to gracefully account for bad horizon data
  - enforce quality control with strict=TRUE
* munsell2rgb() is now 100x faster thanks to plyr::join()
  - note that factors cannot be used in the conversion, see: https://github.com/hadley/plyr/issues/43
    + there is a check and conversion within the function that should prevent segfaults
* documentation updates, demo(aqp) updates, more examples
* bug fix in slice(), now works with numeric OR categorical vars, but NOT both...
* matrix-style subsetting functional:
  - s[i, j] ---> i is the profile index, and j is the horizon/slice index
  - s[i, ] returns a SoilProfileCollection
  - s[, j] returns a SpatialPointsDataFrame when a single slice is used
* spatial_subset() can be used to extract members of a SoilProfileCollection with a geometry (uses rgeos)